<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/slidelinearlayout">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/slideimg"/>

    <TextView
        android:padding="16dp"
        android:id="@+id/txttitle"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="Title Here"
        android:textColor="#fff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:padding="16dp"
        android:id="@+id/txtdescription"
        android:textAlignment="center"
        android:textSize="17sp"
        android:text="Description is Here"
        android:textColor="#fff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtskip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="16dp"
        android:text="swipe right"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="17sp" />




</LinearLayout>